# Tauri-svelte

./: index.html  package-lock.json  package.json
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: MobileTouchHandler.svelte  PlatformIndicator.svelte  TauriDemo.svelte  WindowControls.svelte  platform-detector.ts  tauri-api.ts
